--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,10 @@
 <html>
     <head>
         <body>
+            <form action="/create_todo" method="POST">
+                <input type="text" name="description"/>
+                <input type="submit" name="Create"/>
+            </form>
             <ul>
                 {% for d in data %}
                 <li>{{ d.description }}</li>
