--- a/templates/index.html
+++ b/templates/index.html
@@ -2,16 +2,55 @@
 <html>
     <head>
         <title>Todo App</title>
+        <style>
+            .hidden {
+                display: none;
+            }
+        </style>
     </head>
         <body>
-            <form action="/todo/create" method="POST">
-                <input type="text" name="description"/>
+            <form id="form">
+                <input type="text" id="description" name="description"/>
                 <input type="submit" name="Create"/>
             </form>
-            <ul>
+            <div id="errors" class="hidden">
+                Somethind wnet wrong!
+            </div>
+            <ul id="todo">
                 {% for d in data %}
                 <li>{{ d.description }}</li>
                 {% endfor %}
             </ul>
+            <script>
+                const descInput = document.getElementById('description');
+                document.getElementById('form').onsubmit = function(e) {
+                    e.preventDefault();
+                    const desc = descInput.value;
+                    descInput.value = '';
+                    fetch('/todo/create', {
+                        method: 'POST',
+                        body: JSON.stringify({
+                            'description': desc,
+                        }),
+                        headers: {
+                            'Content-Type': 'application/json'
+                        }                    
+                    })
+                    .then(function(response) {
+                        return response.json();
+                    })
+                    .then(function(jsonResponse) {
+                        console.log('response',jsonResponse);
+                        li = document.createElement('li');
+                        li.innerText = desc;
+                        document.getElementById('todo').appendChild(li);
+                        document.getElementById('errors').className = 'hidden';
+                    })
+                    .catch(function(err) {
+                        console.log(err)
+                        document.getElementById('errors').className = '';
+                    })
+                }
+            </script>
         </body>   
 </html>
