--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,7 @@
 <html>
     <head>
         <title>Todo App</title>
-        <style>
-            .hidden {
-                display: none;
-            }
-        </style>
+        <link rel="stylesheet" href="styles.css" />
     </head>
         <body>
             <form id="form">
@@ -18,10 +14,38 @@
             </div>
             <ul id="todo">
                 {% for d in data %}
-                <li>{{ d.description }}</li>
+                <li>
+                    <input class="check-completed" data-id="{{ d.id }}" type="checkbox" {% if d.completed %} checked {% endif %} />
+                    {{ d.description }}
+                </li>
                 {% endfor %}
             </ul>
             <script>
+                const checkboxes = document.querySelectorAll('.check-completed');
+                for (let i = 0; i < checkboxes.length; i++) {
+                    const checkbox = checkboxes[i];
+                    checkbox.onchange = function(e) {
+                        console.log('event', e);
+                        const newCompleted = e.target.checked;
+                        const todoId = e.target.dataset['id'];
+                        fetch('todo/' + todoId +'/set-completed', {
+                            method: 'POST',
+                            body: JSON.stringify({
+                                'completed': newCompleted
+                            }),
+                            headers: {
+                                'Content-Type': 'application/json'
+                            }
+                        })
+                        .then(function() {
+                            document.getElementById('errors').className = 'hidden';
+                        })
+                        .catch(function(err) {
+                            console.log(err)
+                            document.getElementById('errors').className = '';
+                        })
+                    }
+                }
                 const descInput = document.getElementById('description');
                 document.getElementById('form').onsubmit = function(e) {
                     e.preventDefault();
