test: Add list of "Lists" to view

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,18 +16,34 @@
                 </nav>
               </header>
             <form class="form" id="form">
-                <input type="text" id="description" name="description"/>
+                <input type="text" id="description-list" name="description-list"/>
+                <input type="submit" name="Create"/>
+            </form>
+            <div id="errors" class="hidden">
+                Somethind wnet wrong!
+            </div>
+            <ul class="lists" id="lists">
+                {% for list in lists %}
+                <li>
+                    <input class="check-completed" data-id="{{ list.id }}" type="checkbox" {% if list.completed %} checked {% endif %} />
+                    {{ list.name }}
+                    <button class="delete-button" data-id="{{ list.id }}">&cross;</button>
+                </li>
+                {% endfor %}
+            </ul>
+            <form class="form" id="form">
+                <input type="text" id="description-todo" name="description-todo"/>
                 <input type="submit" name="Create"/>
             </form>
             <div id="errors" class="hidden">
                 Somethind wnet wrong!
             </div>
             <ul class="list" id="todos">
-                {% for d in data %}
+                {% for todo in todos %}
                 <li>
-                    <input class="check-completed" data-id="{{ d.id }}" type="checkbox" {% if d.completed %} checked {% endif %} />
-                    {{ d.description }}
-                    <button class="delete-button" data-id="{{ d.id }}">&cross;</button>
+                    <input class="check-completed" data-id="{{ todo.id }}" type="checkbox" {% if todo.completed %} checked {% endif %} />
+                    {{ todo.description }}
+                    <button class="delete-button" data-id="{{ todo.id }}">&cross;</button>
                 </li>
                 {% endfor %}
             </ul>
@@ -57,7 +73,7 @@
                         })
                     }
                 }
-                const descInput = document.getElementById('description');
+                const descInput = document.getElementById('description-todo');
                 document.getElementById('form').onsubmit = function(e) {
                     e.preventDefault();
                     const desc = descInput.value;
@@ -79,6 +95,35 @@
                         li = document.createElement('li');
                         li.innerText = desc;
                         document.getElementById('todos').appendChild(li);
+                        document.getElementById('errors').className = 'hidden';
+                    })
+                    .catch(function(err) {
+                        console.log(err)
+                        document.getElementById('errors').className = '';
+                    })
+                }
+                const descInputList = document.getElementById('description-list');
+                document.getElementById('form').onsubmit = function(e) {
+                    e.preventDefault();
+                    const name = descInputList.value;
+                    descInputList.value = '';
+                    fetch('/todo/create-list', {
+                        method: 'POST',
+                        body: JSON.stringify({
+                            'name': name,
+                        }),
+                        headers: {
+                            'Content-Type': 'application/json'
+                        }                    
+                    })
+                    .then(function(response) {
+                        return response.json();
+                    })
+                    .then(function(jsonResponse) {
+                        console.log('response',jsonResponse);
+                        li = document.createElement('li');
+                        li.innerText = name;
+                        document.getElementById('lists').appendChild(li);
                         document.getElementById('errors').className = 'hidden';
                     })
                     .catch(function(err) {
