--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
         <ul id="lists">
             {% for list in lists %}
             <li>
-                <input class="check-completed" data-id="{{ list.id }}" type="checkbox" {% if list.completed %} checked
+                <input class="list-completed" data-id="{{ list.id }}" type="checkbox" {% if list.completed %} checked
                     {% endif %} />
                 <a href="/lists/{{ list.id }}">
                     {{ list.name }}
