--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
     </header>
 
     <div class="lists-wrapper">
-        <h4>{{ active_list.name }}</h4>
+        <h4>TODO LISTS</h4>
         <form class="form" id="form-list">
             <input type="text" id="description-list" name="description-list" />
             <input type="submit" name="Create" />
@@ -39,7 +39,7 @@
     </div>
 
     <div class="todos-wrapper">
-        <h4 id="active-list" data-id="{{ active_list.id }}">{{ active_list.name }}</h4>
+        <h4 id="active-list" data-id="{{ active_list.id }}"> TODO Items: {{ active_list.name }}</h4>
         <form class="form" id="form-todo">
             <input type="text" id="description-todo" name="description-todo" />
             <input type="submit" name="Create" />
@@ -83,6 +83,31 @@
                     });
             };
         }
+        const checkboxesList = document.querySelectorAll(".list-completed");
+        for (let i = 0; i < checkboxesList.length; i++) {
+            const checkbox = checkboxesList[i];
+            checkbox.onchange = function (e) {
+                console.log("event", e);
+                const newCompleted = e.target.checked;
+                const listId = e.target.dataset["id"];
+                fetch("/lists/" + listId + "/set-completed", {
+                    method: "POST",
+                    body: JSON.stringify({
+                        completed: newCompleted,
+                    }),
+                    headers: {
+                        "Content-Type": "application/json",
+                    },
+                })
+                    .then(function () {
+                        document.getElementById("errors-lists").className = "hidden";
+                    })
+                    .catch(function (err) {
+                        console.log(err);
+                        document.getElementById("errors-lists").className = "";
+                    });
+            };
+        }
         const descInput = document.getElementById("description-todo");
         const activeList = document.getElementById("active-list");
         document.getElementById("form-todo").onsubmit = function (e) {
@@ -120,7 +145,7 @@
             e.preventDefault();
             const name = descInputList.value;
             descInputList.value = "";
-            fetch("/todo/create-list", {
+            fetch("/list/create", {
                 method: "POST",
                 body: JSON.stringify({
                     name: name,
@@ -163,7 +188,7 @@
             const btn = deleteBtns[i];
             btn.onclick = function (e) {
                 const todoId = e.target.dataset["id"];
-                fetch("/todo/" + todoId, {
+                fetch("/todo/" + todoId + "/delete", {
                     method: "DELETE",
                 }).then(function (response) {
                     e.target.parentNode.remove();
