--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
                 console.log("event", e);
                 const newCompleted = e.target.checked;
                 const todoId = e.target.dataset["id"];
-                fetch("todo/" + todoId + "/set-completed", {
+                fetch("/todo/" + todoId + "/set-completed", {
                     method: "POST",
                     body: JSON.stringify({
                         completed: newCompleted,
