--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
             <input type="text" id="description-list" name="description-list" />
             <input type="submit" name="Create" />
         </form>
-        <div id="errors-list" class="hidden">Somethind went wrong!</div>
+        <div id="errors-lists" class="hidden">Somethind went wrong!</div>
         <ul id="lists">
             {% for list in lists %}
             <li>
